--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -59,6 +59,8 @@ const fullTitle = "Valle de Arbas | " + title;
 	<meta name="twitter:image:alt" content={title} />
 	<meta name="twitter:site" content="@trailvallearbas" />
 	<meta name="twitter:creator" content="@trailvallearabas" />
+
+	<link rel="sitemap" href="/sitemap-index.xml" type="application/xml" />
 	
 	<!-- Script de animaciones -->
 	<script src="/scripts/animations.js" defer></script>
