--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -238,7 +238,7 @@ const sponsors: Sponsor[] = [
           cardTitle="2 Distancias y una para cadetes e infantiles"
           cardDescription="Desde 5'5km hasta 23km, para todos los niveles."
           cardIcon="M4 4v15a1 1 0 0 0 1 1h15M8 16l2.5-5.5 3 3L17.273 7 20 9.667"
-          cardLink="/info#carrera-montana"
+          cardLink="/categorias"
         />
 
         <InfoSection
