--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -100,11 +100,11 @@ import castro4 from '../assets/imgCategorias/castro4.png';
       <DistanceField
         name="Kilómetro Desvertical"
         ,
-        description="Recorrido antioficial de puro descenso para los amantes de la velocidad en montaña."
+        description="Recorrido  de puro descenso para los amantes de la velocidad en montaña."
         ,
-        distance="4,5"
+        distance="5"
         ,
-        uphill="-700"
+        uphill="-430"
         ,
         link="km-desvertical"
       />
@@ -115,11 +115,11 @@ import castro4 from '../assets/imgCategorias/castro4.png';
     <article id="arbas-infinito" class="pt-20 w-[90%] mx-auto max-w-300">
       <div class="title-center pt-4 reveal-element">
         <h2 class="text-2xl font-bold title-underline animate-underline mt-8 mb-4 lg:text-3xl">
-          Trail Arbas Infinito
+          Trail Arbas Infinito (23km +2050m)
         </h2>
       </div>
       <p class="info-text mb-2">
-        Esta carrera recorre de oeste a este el Valle de Arbas, dentro de la <strong
+        Nuestra carrera reina, recorre de oeste a este el Valle de Arbas, dentro de la <strong
           >Reserva de la Biosfera del Alto Bernesga</strong
         >, y se adentra en el pintoresco valle de Caldas de Luna, en el <strong
           >Parque Natural de Babia y Luna</strong
@@ -272,11 +272,11 @@ import castro4 from '../assets/imgCategorias/castro4.png';
     <article id="arbas-luna" class="pt-20 w-[90%] mx-auto max-w-300">
       <div class="title-center pt-4 reveal-element">
         <h2 class="text-2xl font-bold title-underline animate-underline mt-8 mb-4 lg:text-3xl">
-          Trail Arbas-Luna
+          Trail Arbas-Luna (12km +850m)
         </h2>
       </div>
       <p class="info-text mb-2">
-        Esta modalidad está pensada para corredores que prefieren una distancia más corta, rápida y
+        Nuestra carrera corta: esta modalidad está pensada para corredores que prefieren una distancia más corta, rápida y
         con menor exigencia técnica. El recorrido, de 12,5 kilómetros, atraviesa los <strong
           >valles de Arbas</strong
         > y <strong>Caldas de Luna</strong>, ofreciendo magníficas vistas de cumbres emblemáticas
@@ -353,7 +353,7 @@ import castro4 from '../assets/imgCategorias/castro4.png';
       </p>
       <div class="text-center mt-6">
         <a
-          href="#https://es.wikiloc.com/rutas-carrera-por-montana/arbas-luna-by-trail-valle-de-arbas-2025-209373354"
+          href="https://es.wikiloc.com/rutas-carrera-por-montana/arbas-luna-by-trail-valle-de-arbas-2025-209373354"
           class="inline-block bg-linear-to-r from-[#f97316] to-[#e49a69] text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:shadow-lg hover:from-[#e49a69] hover:to-[#f97316] transition-all duration-200"
           target="_blank"
           rel="noopener noreferrer"
