--- a/src/pages/normativa.astro
+++ b/src/pages/normativa.astro
@@ -21,7 +21,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       
       <ul>
         <li>
-          <strong>Edad mínima:</strong> Para las modalidades Trail Arbas Infinito y Trail Arbas-Luna, los participantes deben ser mayores de 18 años cumplidos el día de la prueba o mayores de 16 CON AUTORIZACIÓN.
+          <strong>Edad mínima:</strong> Para las modalidades Trail Arbas Infinito y Trail Arbas-Luna, los participantes deben ser mayores de 18 años cumplidos el día de la prueba o mayores de 16 CON AUTORIZACIÓN (Sólo para el Trail Arbas-Luna).
         </li>
         <li>
           <strong>Categorías inferiores:</strong> La prueba Camino de la Cuencha está destinada a la categoría infantil y cadete (12 a 16 años).
