--- a/src/pages/resultados.astro
+++ b/src/pages/resultados.astro
@@ -69,7 +69,7 @@ import SectionTitle from '../components/SectionTitle.astro';
           />
 
           <ResultsLink
-            url="https://youevent.es/sport/multimedia/clasificaciones/ClasificacionTrailValledeArbas2025-4.pdf"
+            url="https://youevent.es/sport/multimedia/clasificaciones/ClasificacionTrailValledeArbas2025-2.pdf"
           />
         </ResultsCard>
       </div>
@@ -168,7 +168,7 @@ import SectionTitle from '../components/SectionTitle.astro';
             Consulta la clasificación completa de la edición 2024 del Trail Valle de Arbas.
           </p>
           <a
-            href="https://youevent.es/sport/multimedia/clasificaciones/ClasificacionTrailValledeArbas2025-4.pdf"
+            href="https://youevent.es/sport/multimedia/clasificaciones/ClasificacionTrailValledeArbas2024-0.pdf"
             class="inline-block px-6 py-3 bg-linear-to-r from-[#f97316] to-[#e49a69] text-white rounded-lg hover:from-[#e49a69] hover:to-[#f97316] transition-colors focus:outline-none focus:ring-2 focus:ring-[#e49a69]"
             target="_blank"
             rel="noopener noreferrer"
@@ -184,7 +184,7 @@ import SectionTitle from '../components/SectionTitle.astro';
             Revive los mejores momentos de la edición 2024 a través de nuestra galería fotográfica.
           </p>
           <a
-            href="https://photos.google.com/share/AF1QipMFYlZBZO_WB5_xZ7myO3gv1oCftHZsKznnGBy4taS41W2aboaXPWNNwjdCiL77vQ?fbclid=PAQ0xDSwKdc0xleHRuA2FlbQIxMAABp9MEv2ecVCYAQWB2S3kz6cqesLbXBODaCkb9bykRT9Qzy6vtn73ScvEOhLob_aem_4A4CZtrff0E0ZXZz9eg5eg&key=UTBEX0VfZVUxTkFjMC1ISVJLaGxqaWdNQkhvMXRR"
+            href="https://photos.google.com/share/AF1QipM5cSlw2TSEkijD7C9wtsv7o27eRrPlia5F3ZXBin0vDp13Sp9ws0QtcHAGrHtMsw?key=RGlSM3NzLUxSNjk5VEZ0VVoyd1cwZk1PSDNrTGx3"
             class="inline-block px-6 py-3 bg-linear-to-r from-[#f97316] to-[#e49a69] text-white rounded-lg hover:from-[#e49a69] hover:to-[#f97316] transition-colors focus:outline-none focus:ring-2 focus:ring-[#e49a69]"
             target="_blank"
             rel="noopener noreferrer"
