--- a/src/pages/resultados.astro
+++ b/src/pages/resultados.astro
@@ -30,17 +30,17 @@ import SectionTitle from '../components/SectionTitle.astro';
           <CategoryResults categoryName="Categoría Masculina">
             <RunnerItem position={1} name="Pablo SANTOS MARTIN" time="3h 06m 24s" />
             <RunnerItem position={2} name="Carlos VELASCO OLMOS" time="3h 10m 44s" />
-            <RunnerItem position={3} name="Javier DONAIRE CASTILLO" time="3h 12M 32s" />
+            <RunnerItem position={3} name="Javier DONAIRE CASTILLO" time="3h 12m 32s" />
           </CategoryResults>
 
           <CategoryResults categoryName="Categoría Femenina">
             <RunnerItem position={1} name="Itziar GORTAZAR MERAY" time="3h 35m 10s" />
             <RunnerItem position={2} name=" Maria Del Carmen BUENO VILLASUR" time="4h 04m 59s" />
-            <RunnerItem position={3} name="Marta CABRERA FERNANDEZ" time="4h 36M 36s" />
+            <RunnerItem position={3} name="Marta CABRERA FERNANDEZ" time="4h 36m 36s" />
           </CategoryResults>
 
           <RecordBox
-            maleRecord={{ name: 'Pablo SANTOS MARTIN', time: '3h 06M 24s', year: '2025' }}
+            maleRecord={{ name: 'Pablo SANTOS MARTIN', time: '3h 06m 24s', year: '2025' }}
             femaleRecord={{ name: 'Itziar GORTAZAR MERAY', time: '3h 35m 10s', year: '2025' }}
           />
 
