--- a/src/pages/normativa.astro
+++ b/src/pages/normativa.astro
@@ -105,7 +105,7 @@ import SectionTitle from '../components/SectionTitle.astro';
       
       <ul class="list-disc">
         <li><strong>Chaqueta cortavientos:</strong> Con capucha y manga larga, impermeable y transpirable.</li>
-        <li><strong>Guantes y bragahttps://www.google.com/url?q=https%3A%2F%2Fyouevent.es%2Fsport%2Fmultimedia%2Fclasificaciones%2FClasificacionTrailValledeArbas2025-2.pdf&sa=D&sntz=1&usg=AOvVaw2b1P6XXMBPMo8PgKlANReT:</strong> En caso de previsión meteorológica adversa.</li>
+        <li><strong>Guantes y braga:</strong> En caso de previsión meteorológica adversa.</li>
       </ul>
 
       <h3 class="text-xl font-semibold mt-8 mb-4 lg:text-2xl">Material recomendado</h3>
