Update en los patrocinadores

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,31 +27,37 @@ const sponsors: Sponsor[] = [
     name: 'Ayuntamiento de Villamanín',
     logo: '/images/sponsors/villamanin.jpg',
     url: 'https://www.aytovillamanin.es/',
+    level: 'principal',
   },
   {
     name: 'Diputación de León',
     logo: '/images/sponsors/dipu.jpg',
     url: 'https://www.dipuleon.es/',
+    level: 'principal',
   },
   {
     name: 'Federación de Montaña CyL',
     logo: '/images/sponsors/federacion.jpg',
     url: 'https://www.fclm.com/',
+    level: 'principal',
   },
   {
     name: 'Embutidos Ezequiel',
     logo: '/images/sponsors/ezequiel.jpg',
     url: 'https://www.embutidosezequiel.com/?srsltid=AfmBOorSUk5F-bLbms_pT8TVWNKmZzEK4__L4aWE90COOiB122j-hqNh',
+    level: 'principal',
   },
   {
     name: 'RBH Global',
     logo: '/images/sponsors/rbh.png',
     url: 'https://rbhglobal.com/',
+    level: 'principal',
   },
   {
     name: 'Huevos Leon',
     logo: '/images/sponsors/huevos.png',
     url: 'https://www.huevosleon.es/',
+    level: 'principal',
   },
   {
     name: 'Casa Rural Valle de Arbas',
