Ultimos retoques +`SEO

--- a/src/pages/categorias.astro
+++ b/src/pages/categorias.astro
@@ -36,7 +36,7 @@ import castro4 from '../assets/imgCategorias/castro4.png';
 
 <BasePageLayout
   title="Categorías"
-  description="Página web de categorías del Trail Valle de Arbas"
+  description="4 distancias disponibles en el Trail Valle de Arbas: Infinito 23km (2050m+), Luna 12.5km (8500m+), Cuencha 4.5km (190m+) y Castro 5km (430m-). Perfiles, desniveles y requisitos por categoría"
   image="HeaderCategorias"
   imgTitle="Categorías y Distancias"
 >
