--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 
 
-<MainLayout title="Inicio" description="Página web de inicio del Trail Valle de Arbas">
+<MainLayout title="Inicio" description="Trail Valle de Arbas 2026 - Carrera de montaña en León los días 22 y 23 de mayo. 4 distancias: Infinito 23km, Luna 12.5km, Cuencha 4.5km y Castro 5km. Inscripciones, horarios y resultados">
 
 </MainLayout>
