--- a/src/pages/inscripcion.astro
+++ b/src/pages/inscripcion.astro
@@ -6,7 +6,7 @@ import SectionTitle from '../components/SectionTitle.astro';
 
 <BasePageLayout
   title="Inscripciones"
-  description="Página web para las inscripciones del Trail Valle de Arbas"
+  description="Inscríbete en el Trail Valle de Arbas 2026. Proceso de inscripción, precios, plazos y requisitos a través de la Federación de Montaña y Escalada de Castilla y León (FEDME CyL)."
   image="HeaderInscripcion"
   imgTitle="Inscripciones"
 >
