--- a/src/pages/noticias.astro
+++ b/src/pages/noticias.astro
@@ -20,8 +20,8 @@ const orderedNews = [
 ---
 
 <BasePageLayout
-  title="Noticias | Trail Valle de Arbas"
-  description="Últimas noticias y actualizaciones sobre el Trail Valle de Arbas"
+  title="Noticias"
+  description="Últimas noticias, novedades y actualizaciones sobre el Trail Valle de Arbas 2026. Información sobre inscripciones, patrocinadores, cambios en el recorrido y mucho más"
   image="HeaderUbicaciones"
   imgTitle="Noticias"
 >
