--- a/src/pages/noticias/[slug].astro
+++ b/src/pages/noticias/[slug].astro
@@ -29,7 +29,7 @@ const formattedDate = new Intl.DateTimeFormat('es-ES', {
 ---
 
 <BasePageLayout
-  title={`${entry.data.title} | Trail Valle de Arbas`}
+  title={entry.data.title}
   description={entry.data.description}
   image="HeaderUbicaciones"
   imgTitle={entry.data.title}
