--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,13 +2,15 @@
 const { title, description } = Astro.props;
 
 const canonicalURL = Astro.site ? new URL(Astro.url.pathname, Astro.site).toString() : null;
-
+const ogImageURL = Astro.site 
+  ? new URL('/ms-icon-310x310.png', Astro.site).toString() 
+  : '/ms-icon-310x310.png';
 const fullTitle = "Valle de Arbas | " + title;
 ---
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- Primary Meta Tags -->
@@ -16,6 +18,14 @@ const fullTitle = "Valle de Arbas | " + title;
 	<meta name="title" content={fullTitle} />
 	<meta name="description" content={description} />
 	<link rel="canonical" href={canonicalURL} />
+
+	<!--Aditional META TAGS -->
+	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+	<meta name="author" content="Trail Valle de Arbas" />
+	<meta name="language" content="Spanish" />
+	<meta name="geo.region" content="ES-LE" />
+	<meta name="geo.placename" content="Valle de Arbas, León, España" />
+	<meta name="geo.position" content="42.928722;-5.806080" />
 
 	<!-- Global Metadata -->
 	<link rel="icon" href="/favicon.ico" />
@@ -49,18 +59,63 @@ const fullTitle = "Valle de Arbas | " + title;
 	<meta property="og:url" content={canonicalURL} />
 	<meta property="og:title" content={title} />
 	<meta property="og:description" content={description} />
-	<meta property="og:image" content="" />
+	<meta property="og:image" content={ogImageURL} />
+	<meta property="og:image:alt" content={title} />
+	<meta property="og:image:width" content="310" />
+	<meta property="og:image:height" content="310" />
+	<meta property="og:site_name" content="Valle de Arbas" />
 
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content={title} />
 	<meta name="twitter:description" content={description} />
-	<meta name="twitter:image" content="" />
+	<meta name="twitter:image" content={ogImageURL} />
 	<meta name="twitter:image:alt" content={title} />
-	<meta name="twitter:site" content="@trailvallearbas" />
-	<meta name="twitter:creator" content="@trailvallearabas" />
 
 	<link rel="sitemap" href="/sitemap-index.xml" type="application/xml" />
+	
+	<!-- JSON-LD Schema -->
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@graph": [
+				{
+					"@type": "SportsEvent",
+					"name": "Trail Valle de Arbas",
+					"description": "Carrera de trail running en el Valle de Arbas, León, España",
+					"image": ogImageURL,
+					"location": {
+						"@type": "Place",
+						"name": "Valle de Arbas",
+						"address": {
+							"@type": "PostalAddress",
+							"addressLocality": "Valle de Arbas",
+							"addressRegion": "León",
+							"addressCountry": "ES"
+						},
+						"geo": {
+							"@type": "GeoCoordinates",
+							"latitude": "42.928722",
+							"longitude": "-5.806080"
+						}
+					},
+					"organizer": {
+						"@type": "SportsOrganization",
+						"name": "Trail Valle de Arbas",
+						"url": canonicalURL
+					},
+					"sport": "Trail Running"
+				},
+				{
+					"@type": "WebSite",
+					"name": "Trail Valle de Arbas",
+					"url": Astro.site?.toString(),
+					"description": "Sitio oficial del Trail Valle de Arbas",
+					"inLanguage": "es-ES"
+				}
+			]
+		}
+	</script>
 	
 	<!-- Script de animaciones -->
 	<script src="/scripts/animations.js" defer></script>
