--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -70,6 +70,11 @@ const sponsors: Sponsor[] = [
     url: 'https://www.institutoleonesdecultura.es/',
   },
   {
+    name: 'Bunker destilería',
+    logo: '/images/sponsors/bunker.jpg',
+    url: 'https://bunkerdistillery.com/',
+  },
+  {
     name: 'Reserva de la Biosfera del Alto Bernesga',
     logo: '/images/sponsors/biosfera.png',
     url: 'https://altobernesgabiosfera.es/',
