Fixed margin bug

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -190,7 +190,7 @@ const sponsors: Sponsor[] = [
     <StickyMenu class="stiky" />
     <VideoHeader
       src="/videoTrail2026.mp4"
-      poster="/frameTrail2026.png"
+      poster="/frameTrail2026.jpg"
       title="Trail Valle de Arbas 2026"
     />
     <main class="max-w-300 mx-auto">
