--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -12,7 +12,7 @@ const { title, subtitle, className = "" } = Astro.props;
   <h2 class="text-2xl lg:text-3xl sm:text-xl font-bold mt-8 mb-4">{title}</h2>
   <div class="expanding-line mt-2 mb-6"></div>
   {subtitle && (
-    <p class="info-text text-center max-w-300 text-base md:text-lg lg:text-xl fade-in-up" set:html={subtitle}>
+    <p class="info-text text-center px-4 max-w-300 text-base md:text-lg lg:text-xl fade-in-up wrap-break-word" set:html={subtitle}>
     </p>
   )}
 </div>
